[package]
name = "bpf-rngesus"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.1"
arrayref = "0.3.6"
thiserror = "1.0"

[features]
test-bpf = []

[dev-dependencies]
solana-program-test = "=1.8.1"
solana-sdk = "=1.8.1"
solana-validator = "=1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
